@@ -15,8 +15,8 @@ def getGitHash = { ->
 
 
 group 'org.videobug'
-version '2024.2.10-' + getGitHash()
-    
+version '2024.2.13-' + getGitHash()
+def remoteRobotVersion = "0.11.20"
 
 compileJava {
     sourceCompatibility = '11'
@@ -27,11 +27,13 @@ repositories {
     mavenCentral()
     maven {
         url 'https://gitlab.com/api/v4/projects/35360521/packages/maven'
+        url = 'https://packages.jetbrains.team/maven/p/ij/intellij-dependencies'
         name "GitLab"
         credentials(HttpHeaderCredentials) {
             name = 'Private-Token'
             value = gitLabPrivateToken
         }
+        maven { url = "https://packages.jetbrains.team/maven/p/ij/intellij-dependencies" }
         authentication {
             header(HttpHeaderAuthentication)
         }
@@ -72,6 +74,7 @@ runIde {
             "-Xmx1G",
             "--add-exports",
             "java.base/jdk.internal.vm=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang=ALL-UNNAMED"
 //            "-XX:FlightRecorderOptions=stackdepth=100"
     ]
 }
@@ -95,16 +98,14 @@ dependencies {
     implementation 'org.json:json:20201115'
     implementation 'com.amplitude:java-sdk:1.12.0'
     implementation 'com.squareup:javapoet:1.13.0'
-    implementation 'org.junit.jupiter:junit-jupiter-api:5.9.3'
     implementation 'org.apache.logging.log4j:log4j-api:2.17.2'
     implementation 'org.apache.logging.log4j:log4j-core:2.17.2'
     implementation 'com.github.javaparser:javaparser-core:3.24.8'
+    implementation 'com.google.code.gson:gson:2.8.5'
 //    implementation 'com.github.javafaker:javafaker:1.0.2'
     implementation 'io.minio:minio:8.4.3'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
     testImplementation 'org.mockito:mockito-core:4.0.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
 //    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2'
 
@@ -116,8 +117,15 @@ dependencies {
     implementation 'com.googlecode.cqengine:cqengine:3.6.0'
     implementation 'io.kaitai:kaitai-struct-runtime:0.9'
 
-//    implementation files("/Users/artpar/.m2/repository/video/bug/unlogged-sdk/0.1.33/unlogged-sdk-0.1.33.jar")
-//    annotationProcessor files("/Users/artpar/.m2/repository/video/bug/unlogged-sdk/0.1.33/unlogged-sdk-0.1.33.jar")
+    testImplementation 'com.intellij.remoterobot:remote-robot:' + remoteRobotVersion
+    testImplementation 'com.intellij.remoterobot:remote-fixtures:' + remoteRobotVersion
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.0'
+
+//    implementation files("/Users/artpar/.m2/repository/video/bug/unlogged-sdk/0.1.12/unlogged-sdk-0.1.12.jar")
+//    annotationProcessor files("/Users/artpar/.m2/repository/video/bug/unlogged-sdk/0.1.12/unlogged-sdk-0.1.12.jar")
 
 //    implementation 'video.bug:unlogged-sdk:0.1.12'
 //    annotationProcessor 'video.bug:unlogged-sdk:0.1.12'
@@ -140,7 +148,7 @@ runPluginVerifier {
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
 intellij {
-    version = '2023.2.3'
+    version = '2022.3.3'
     plugins = ['com.intellij.java', 'maven', 'gradle', 'org.jetbrains.kotlin']
     updateSinceUntilBuild = false
     sameSinceUntilBuild = true
@@ -151,36 +159,90 @@ intellij {
 }
 patchPluginXml {
     changeNotes = """
+<h2>Release Notes - 2024.2.13</h2>
 
-<h3 id="release-notes-unlogged-io-s-latest-gem-a-10x-java-developer-s-dream-come-true">Release Notes: Unlogged.io&#39;s Latest Gem 💎 - A 10x Java Developer&#39;s Dream Come True</h3>
-<h4 id="granular-performance-tracking-because-every-millisecond-counts-">Granular Performance Tracking: Because Every Millisecond Counts ⏱️</h4>
-<p>Gone are the days when performance tracking was just a distant, API-level dream. With our newest spectacle, you can now see precisely what time each method takes, down to the most minuscule detail. It&#39;s like having a microscope for your code, but instead of looking at germs, you&#39;re watching your methods dance in real-time. Welcome to the future, where every millisecond is accounted for, and every performance hiccup is spotted faster than you can say &quot;Java&quot;.</p>
-<h4 id="ghost-icon-spookily-simple-mocking-">Ghost Icon: Spookily Simple Mocking 👻</h4>
-<p>Clicking on our ghost icon allows you to mock db calls, API calls, Redis calls, downstream services, and file operations with the recorded data. Yes, you read that right. One click. No more wrestling with bloated containers that eat up your system resources like there&#39;s no tomorrow. It&#39;s so easy, it&#39;s almost scary. Our ghost icon is here to make your developer life a breeze, not to haunt your nightmares.</p>
-<h4 id="save-replays-with-a-snap-auto-magical-assertions-">Save Replays with a Snap: Auto-Magical Assertions ✨</h4>
-<p>Imagine saving replays of all methods at once, with a mere selection. That&#39;s not just imagination now; it&#39;s reality. Unlogged auto-defines assertions for you, because who has the time to manually do that? Not you, busy Java developers. Our platform automatically saves and maps mocks to replays, making your testing workflow smoother than a hot knife through butter.</p>
-<h4 id="integration-or-unit-we-don-t-discriminate-test-your-heart-out-">Integration or Unit, We Don&#39;t Discriminate: Test Your Heart Out ❤️</h4>
-<p>Run your replays in unit or integration mode using mvn test or ./gradlew test. Getting a test report has never been easier. It&#39;s like choosing between chocolate and vanilla — regardless of your pick, the outcome is sweet. With Unlogged, testing becomes less of a chore and more of a choice.</p>
-<h4 id="commit-like-a-pro-replay-tests-at-your-fingertips-">Commit Like a Pro: Replay Tests at Your Fingertips 🏆</h4>
-<p>The replay tests we create reside cozily inside the /test/resources/unlogged folder. This means you can commit and push these tests to your repo with the swagger of a cowboy at high noon. Show off your testing prowess and make your team members green with envy. Or better yet, share the love and let them in on the secret to your success.</p>
-<h4 id="context-reading-because-we-care-about-the-details-">Context Reading: Because We Care About the Details 🔍</h4>
-<p>Unlogged can now read the saved context for authentication and other headers, because we understand that the devil is in the details. No more manual tinkering or guessing games. It&#39;s like we&#39;ve handed you the keys to the kingdom of efficiency.</p>
-<p>Java development can sometimes feel like a battle, but Unlogged.io&#39;s latest release is the cavalry coming over the hill. </p>
-<p>So saddle up, developers! With our tool, you&#39;re not just coding; you&#39;re crafting a masterpiece with the precision of a watchmaker and the vision of an artist. </p>
-<p>Happy coding!  </p>
+<h3>New Features and Enhancements</h3>
+<p>We are excited to announce the latest release of our service, introducing *Unlogged Premium*! Our premium plan offers a suite of advanced features designed to enhance your experience and boost productivity. Here's what's new:
+</p>
+<h3>Unlogged Premium Features:</h3>
+<ol>
+   <li>
+    <p><b>Priority Support</b></p>
+    <p>Get access to our dedicated support team for faster resolutions and personalized assistance.</p>
+   </li>
 
+   <li>
+    <p><b>AI Assistance in Debugging</b></p>
+    <p>Leverage cutting-edge AI technology to help you debug your applications more efficiently and effectively.</p>
+   </li>
+
+   <li>
+    <p><b>Save Unlimited Mocks and Tests</b></p>
+    <p>Enjoy the freedom to save an unlimited number of mocks and tests, ensuring you can thoroughly test your applications without any limitations or hassles.</p>
+   </li>
+
+   <li>
+    <p><b>Updates</b></p>
+    <p>Stay ahead with exclusive updates and enhancements available only to premium users.</p>
+   </li>
+
+   <li>
+    <p><b>Server-Side Recording and Replay</b></p>
+    <p>Record and replay server-side interactions to diagnose issues and improve the performance of your applications.</p>
+   </li>
+</ol>
+
+<h3>General Improvements:</h3>
+<ol>
+    <li>
+        <p><b>Enhanced Performance</b></p>
+        <p>We have made several performance improvements to ensure smoother and faster operation across the platform.</p>
+    </li>
+    <li>
+        <p><b>Bug Fixes</b></p>
+        <p>Various bug fixes have been implemented to enhance stability and reliability.</p>
+    </li>
+</ol>
+
+<h3>How to Upgrade:</h3>
+<p>Upgrading to Unlogged Premium is simple. Start your subscription <a href="https://buy.stripe.com/fZeg1jc4I5UV1Gw146">here</a> </p>
+<p>Thank you for your continued support. We are committed to providing you with the best tools and features to optimize your development process.</p>
+
+<p>Best Regards,</p>
+<p>The Unlogged Team</p>
     """
 }
 
 publishPlugin {
     token = "perm:c2hhcmR1bGxhdmVrYXI=.OTItMTAwMzA=.ZtumD3AexEy1NbzN66xWyJppVwMugG"
-    channels = ['stable']
+    channels = ['alpha']
+}
+
+runIdeForUiTests {
+
+    jvmArgs = [
+            "--add-opens java.base/java.lang=ALL-UNNAMED"
+    ]
+    systemProperty "robot-server.port", "8082"
+    systemProperty "ide.mac.message.dialogs.as.sheets", "false"
+    systemProperty "jb.privacy.policy.text", "<!--999.999-->"
+    systemProperty "jb.consents.confirmation.enabled", "false"
+    systemProperty "ide.mac.file.chooser.native", "false"
+    systemProperty "jbScreenMenuBar.enabled", "false"
+    systemProperty "apple.laf.useScreenMenuBar", "false"
+    systemProperty "idea.trust.all.projects", "true"
+    systemProperty "ide.show.tips.on.startup.default.value", "false"
+}
+
+downloadRobotServerPlugin {
+    version.set(remoteRobotVersion)
 }
 
 test {
     useJUnitPlatform()
     jvmArgs = [
-            "-Xmx1G"
+            "--add-opens java.base/java.lang=ALL-UNNAMED",
+            "-Xmx2G"
     ]
 }
 //sourceCompatibility = JavaVersion.VERSION_17
